--- a/spring-mvc/validation/src/main/resources/errors.properties
+++ b/spring-mvc/validation/src/main/resources/errors.properties
@@ -30,3 +30,8 @@ max= {0} ?? ?????.
 
 typeMismatch.java.lang.Integer=??? ??????.
 typeMismatch=?? ?????.
+
+#Bean Validation ??
+NotBlank={0} ??X
+Range={0}, {2} ~ {1} ??
+Max={0}, ?? {1}
